--- a/index.html
+++ b/index.html
@@ -277,6 +277,10 @@
         </div>
     </main>
 </body>
-<script type="text/javascript" src="scripts.js"></script>
+<script type="text/javascript" src="scripts.js">
+if('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('service-worker.js');
+}
+</script>
 
 </html>
