--- a/index.html
+++ b/index.html
@@ -277,10 +277,8 @@
         </div>
     </main>
 </body>
-<script type="text/javascript" src="scripts.js">
-if('serviceWorker' in navigator) {
+<script type="text/javascript" src="scripts.js"></script>
+<script type="text/javascript">if('serviceWorker' in navigator) {
     navigator.serviceWorker.register('service-worker.js');
-}
-</script>
-
+}</script>
 </html>
